main service completed
